[project]
name = "ixd-research-project"
version = "0.1.0"
description = "A research project using the IxD Research Python Project Template."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Creative Commons Attribution-ShareAlike 4.0 International License"}

dependencies = [
]

[project.optional-dependencies]
dev = [
]
